--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="https://raw.githubusercontent.com/Rolei1/website/main/favicon.ico">
   </head>
   <body>
     <div id='stars'></div>
